--- a/web/front-web-field-reservation/package.json
+++ b/web/front-web-field-reservation/package.json
@@ -6,9 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sweetalert2": "^11.7.3"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
