--- a/web/front-web-field-reservation/package.json
+++ b/web/front-web-field-reservation/package.json
@@ -10,6 +10,7 @@
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-select": "^5.7.2",
     "sweetalert2": "^11.7.3"
   },
   "devDependencies": {
